nieuwevelden ook naar xml bestand

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,7 @@ UI Source Code/__history/OursResultMain.pas.~12~
 UI Source Code/__history/OursResultMain.pas.~11~
 UI Source Code/__history/OursResultMain.pas.~1~
 UI Source Code/__history/OursResultMain.pas.~2~
+UI Source Code/__history/OursData_XML.pas.~4~
+UI Source Code/__history/OursData_XML.pas.~3~
+UI Source Code/__history/OursCalcMain.pas.~2~
+UI Source Code/__history/OursCalcMain.pas.~1~
