--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,8 @@ UI Source Code/__history/OursData_XML.pas.~4~
 UI Source Code/__history/OursData_XML.pas.~3~
 UI Source Code/__history/OursCalcMain.pas.~2~
 UI Source Code/__history/OursCalcMain.pas.~1~
+UI Source Code/__history/OursResultMain.pas.~15~
+UI Source Code/__history/OursResultMain.pas.~14~
+UI Source Code/__history/OursData_XML.pas.~6~
+UI Source Code/__history/OursData_XML.pas.~5~
+UI Source Code/__history/OursCalcMain.pas.~3~
