--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,8 @@ UI Source Code/__history/OursResultMain.pas.~14~
 UI Source Code/__history/OursData_XML.pas.~6~
 UI Source Code/__history/OursData_XML.pas.~5~
 UI Source Code/__history/OursCalcMain.pas.~3~
+UI Source Code/__history/OursResultMain.pas.~16~
+UI Source Code/__history/OursData_XML.pas.~8~
+UI Source Code/__history/OursData_XML.pas.~7~
+UI Source Code/__history/F_Main.dfm.~5~
+UI Source Code/__history/F_Main.dfm.~4~
